# nemdatatools

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.html  README.md  data-profile.html  genindex.html  index.html  objects.inv  pre-commit-config.yaml  project-setup-commands.sh  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  data-profile.doctree  environment.pickle  index.doctree
.doctrees/dev/: commitizen-guide.doctree  implementation-plan.doctree  project-structure.doctree  quickstart-with-pre-commit.doctree  quickstart-with-uv.doctree  uv-integration.doctree
.github/workflows/: docs.yml  publish-pypi.yml  publish-testpypi.yml  test.yml  tests.yml
_sources/: README.md.txt  index.rst.txt
_sources/dev/: implementation-plan.md.txt  project-structure.md.txt  quickstart-with-pre-commit.md.txt
dev/: commitizen-guide.html  implementation-plan.html  project-structure.html  quickstart-with-pre-commit.html  quickstart-with-uv.html  uv-integration.html
docs/: README.md  conf.py  data-profile.md  index.rst
docs/dev/: implementation-plan.md  project-structure.md
examples/: epf_examples.py  usage_examples.py
src/nemdatatools/: __init__.py  batch_commands.py  cache.py  data_source.py  downloader.py  mmsdm_helper.py  processor.py  timeutils.py
tests/: test_batch_commands.py  test_cache.py  test_downloader.py  test_processor.py  test_timeutils.py
